add NT password hash